added backend for email and database

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,1 @@
-VITE_SUPABASE_URL=
-VITE_SUPABASE_ANON_KEY=
-VITE_EMAILJS_SERVICE_ID=
-VITE_EMAILJS_TEMPLATE_NAME=
-VITE_EMAILJS_PUBLIC_KEY=
+VITE_BACKEND_API_URL=
