--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.31.0",
-    "emailjs-com": "^3.2.0",
+    "axios": "^1.5.0",
     "vue": "^3.2.37"
   },
   "devDependencies": {
