--- a/package.json
+++ b/package.json
@@ -15,5 +15,17 @@
     "@vitejs/plugin-vue": "^3.0.1",
     "sass": "^1.54.9",
     "vite": "^3.0.4"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Gerg0/portfoliosite.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Gerg0/portfoliosite/issues"
+  },
+  "homepage": "https://github.com/Gerg0/portfoliosite#readme"
 }
